# iic-rag

./: .env.example  ARCHITECTURE.md  PHASES.md  README.md  api.py  app.py  cli.py  pyproject.toml
eval/: questions.yaml
sql/: schema.sql
src/: chunker.py  config.py  confluence.py  embedder.py  generator.py  gitlab_source.py  ingest.py  jira.py  models.py  query.py  reranker.py  rewriter.py  store.py
