[project]
name = "rag-phase1"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "atlassian-python-api>=3.41.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.0",
    "tiktoken>=0.8.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "typer>=0.13.0",
    "rich>=13.9.0",
    "pyyaml>=6.0.0",
    "python-gitlab>=8.3.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "streamlit>=1.57.0",
    "psycopg-pool>=3.3.1",
]
